build(spring-boot-docker): 项目构建，初始提交